actualizacion de Indez
Omiti ejercicios extra

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Al concluir la capacitación, el participante utilizará las herramientas de ges
                         <p></p>
                         <a href="interactivo/ej_filtros.xls" class="link link-primary">Consulta aquí</a>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <!--<div class="col-md-3 col-sm-6">
                         <div class="box">
                             <div class="box_left">
                                 <span class="icon icon-primary icon-lg fa fa-download"></span>
@@ -282,7 +282,7 @@ Al concluir la capacitación, el participante utilizará las herramientas de ges
                         </div>
                         <p></p>
                         <a href="interactivo/excel_2010.xlsx" class="link link-primary">Consulta aquí</a>
-                    </div>
+                    </div>-->
                     <div class="col-md-3 col-sm-6">
                         <div class="box">
                             <div class="box_left">
